// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components/Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-bZQynM kekdXn"
  >
    <table
      className="sc-gzVnrw bhHRgJ"
    >
      <tbody
        className="sc-dnqmqq bDsesi"
      >
        <tr
          className="sc-iwsKbI hpfhiQ"
        >
          <td
            className="sc-gZMcBi bniAfg"
          >
            US
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-iwsKbI hpfhiQ"
        >
          <td
            className="sc-gZMcBi bniAfg"
          >
            PL
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Warsaw
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-iwsKbI hpfhiQ"
        >
          <td
            className="sc-gZMcBi bniAfg"
          >
            DE
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Berlin
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-iwsKbI hpfhiQ"
        >
          <td
            className="sc-gZMcBi bniAfg"
          >
            FR
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Paris
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-iwsKbI hpfhiQ"
        >
          <td
            className="sc-gZMcBi bniAfg"
          >
            ES
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Madird
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Spain
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components/Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-bZQynM kekdXn"
  >
    <table
      className="sc-gzVnrw bhHRgJ"
    >
      <thead
        className="sc-htoDjs bZzhDu"
      >
        <tr
          className="sc-iwsKbI hpfhiQ"
        >
          <th
            className="sc-gqjmRU lXdrk"
          >
            Code
          </th>
          <th
            className="sc-gqjmRU lXdrk"
          >
            Capital
          </th>
          <th
            className="sc-gqjmRU lXdrk"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-dnqmqq bDsesi"
      >
        <tr
          className="sc-iwsKbI hpfhiQ"
        >
          <td
            className="sc-gZMcBi bniAfg"
          >
            US
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-iwsKbI hpfhiQ"
        >
          <td
            className="sc-gZMcBi bniAfg"
          >
            PL
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Warsaw
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-iwsKbI hpfhiQ"
        >
          <td
            className="sc-gZMcBi bniAfg"
          >
            DE
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Berlin
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-iwsKbI hpfhiQ"
        >
          <td
            className="sc-gZMcBi bniAfg"
          >
            FR
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Paris
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-iwsKbI hpfhiQ"
        >
          <td
            className="sc-gZMcBi bniAfg"
          >
            ES
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Madird
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Spain
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components/Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-bZQynM kekdXn"
  >
    <table
      className="sc-gzVnrw bhHRgJ"
    >
      <thead
        className="sc-htoDjs bZzhDu"
      >
        <tr
          className="sc-iwsKbI hpfhiQ"
        >
          <th
            className="sc-gqjmRU lXdrk"
          >
            #
          </th>
          <th
            className="sc-gqjmRU lXdrk"
          >
            Code
          </th>
          <th
            className="sc-gqjmRU lXdrk"
          >
            Capital
          </th>
          <th
            className="sc-gqjmRU lXdrk"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-dnqmqq bDsesi"
      >
        <tr
          className="sc-iwsKbI hpfhiQ"
        >
          <td
            className="sc-VigVT dStNGp"
          >
            1
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            US
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-iwsKbI hpfhiQ"
        >
          <td
            className="sc-VigVT dStNGp"
          >
            2
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            PL
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Warsaw
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-iwsKbI hpfhiQ"
        >
          <td
            className="sc-VigVT dStNGp"
          >
            3
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            DE
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Berlin
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-iwsKbI hpfhiQ"
        >
          <td
            className="sc-VigVT dStNGp"
          >
            4
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            FR
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Paris
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-iwsKbI hpfhiQ"
        >
          <td
            className="sc-VigVT dStNGp"
          >
            5
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            ES
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Madird
          </td>
          <td
            className="sc-gZMcBi bniAfg"
          >
            Spain
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
